# Embodied-AI

./: .gitignore  Dockerfile  Makefile  README.md  plan.md  pyproject.toml
configs/: default.yaml
configs/algo/: bc.yaml  ppo_pixels.yaml  sac_pixels.yaml
configs/augmentation/: drq_light.yaml  none.yaml
configs/domain_randomization/: heavy.yaml  light.yaml  off.yaml
configs/encoder/: cnn_small.yaml  dinov2_frozen.yaml  dinov2_unfreeze.yaml
configs/env/: maniskill_pickplace.yaml  maniskill_stack.yaml
configs/obs/: rgb_128.yaml  rgb_84.yaml  rgbd_128.yaml
docs/: experiments.md  report.md  troubleshooting.md
scripts/: download_assets.sh  install.sh  run_sweep.sh
src/embodied_ai/: __init__.py
src/embodied_ai/algorithms/: __init__.py  bc_trainer.py  callbacks.py  rl_sb3.py
src/embodied_ai/cli/: __init__.py  collect_demos.py  eval_policy.py  finetune_bc_to_rl.py  train_bc.py  train_rl.py
src/embodied_ai/data/: __init__.py  demos_dataset.py  replay_export.py  storage.py
src/embodied_ai/envs/: __init__.py  cameras.py  make_env.py  tasks.py
src/embodied_ai/envs/wrappers/: __init__.py  obs_wrappers.py  record_wrappers.py  success_wrappers.py  time_limit.py
src/embodied_ai/logging/: __init__.py  metrics.py  tb_logger.py  video.py  wandb_logger.py
src/embodied_ai/models/: __init__.py
src/embodied_ai/models/bc/: __init__.py  actor.py
src/embodied_ai/models/encoders/: __init__.py  cnn.py  (+2 more)
src/embodied_ai/utils/: __init__.py  config.py  device.py  seed.py  serialization.py  timers.py
tests/: conftest.py  test_demos_dataset.py  test_make_env.py
(+3 files in other folders)
